--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.2.28",
-    "gatsby-remark-images": "^3.1.25",
+    "gatsby-remark-copy-linked-files": "^2.1.26",
+    "gatsby-remark-images": "^3.1.26",
     "gatsby-remark-prismjs": "^3.2.9",
+    "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-remark-responsive-iframe": "^2.1.1",
     "gatsby-source-filesystem": "^2.0.37",
     "gatsby-transformer-remark": "^2.3.12",
