--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.7.1",
     "gatsby-image": "^2.1.1",
     "gatsby-plugin-emotion": "^4.0.7",
+    "gatsby-plugin-google-analytics": "^2.1.21",
     "gatsby-plugin-google-fonts": "^1.0.0",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.1",
@@ -35,6 +36,7 @@
     "react-icons": "^3.7.0"
   },
   "devDependencies": {
+    "gh-pages": "^2.1.1",
     "prettier": "^1.17.1"
   },
   "keywords": [
@@ -47,7 +49,8 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "deploy:github": "npm run build && node ./scripts/deploy-github"
   },
   "repository": {
     "type": "git",
